<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.smartexpenseai.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_merchant_transactions"
            app:destination="@id/navigation_merchant_transactions" />
        <action
            android:id="@+id/action_navigation_categories_to_navigation_category_transactions"
            app:destination="@id/navigation_category_transactions" />
    </fragment>

    <fragment
        android:id="@+id/navigation_insights"
        android:name="com.smartexpenseai.app.ui.insights.InsightsFragment"
        android:label="@string/nav_insights"
        tools:layout="@layout/fragment_insights" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.smartexpenseai.app.ui.messages.MessagesFragment"
        android:label="@string/nav_messages"
        tools:layout="@layout/fragment_messages">
        <action
            android:id="@+id/action_navigation_messages_to_transaction_details"
            app:destination="@id/navigation_transaction_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.smartexpenseai.app.ui.categories.CategoriesFragment"
        android:label="@string/nav_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_navigation_categories_to_navigation_category_transactions"
            app:destination="@id/navigation_category_transactions" />
        <action
            android:id="@+id/action_categories_to_category_detail"
            app:destination="@id/navigation_category_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.smartexpenseai.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_notifications_settings"
            app:destination="@id/navigation_notifications_settings" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_export_data"
            app:destination="@id/navigation_export_data" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category_detail"
        android:name="com.smartexpenseai.app.ui.categories.CategoryDetailFragment"
        android:label="Category Detail"
        tools:layout="@layout/fragment_category_detail">
        <argument
            android:name="categoryName"
            app:argType="string" />
        <action
            android:id="@+id/action_category_detail_to_merchant_transactions"
            app:destination="@id/navigation_merchant_transactions" />
        <action
            android:id="@+id/action_category_detail_to_category_transactions"
            app:destination="@id/navigation_category_transactions" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category_transactions"
        android:name="com.smartexpenseai.app.ui.categories.CategoryTransactionsFragment"
        android:label="Category Transactions"
        tools:layout="@layout/fragment_category_transactions">
        <argument
            android:name="categoryName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.smartexpenseai.app.ui.profile.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_navigation_budget_goals"
            app:destination="@id/navigation_budget_goals" />
    </fragment>

    <fragment
        android:id="@+id/navigation_budget_goals"
        android:name="com.smartexpenseai.app.ui.profile.BudgetGoalsFragment"
        android:label="Budget Goals"
        tools:layout="@layout/fragment_budget_goals" />

    <fragment
        android:id="@+id/navigation_notifications_settings"
        android:name="com.smartexpenseai.app.ui.profile.NotificationsFragment"
        android:label="Notification Settings"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_export_data"
        android:name="com.smartexpenseai.app.ui.profile.ExportDataFragment"
        android:label="Export Data"
        tools:layout="@layout/fragment_export_data" />

    <fragment
        android:id="@+id/navigation_transaction_details"
        android:name="com.smartexpenseai.app.ui.transaction.TransactionDetailsFragment"
        android:label="Transaction Details"
        tools:layout="@layout/fragment_transaction_details">
        <argument
            android:name="amount"
            app:argType="float" />
        <argument
            android:name="merchant"
            app:argType="string" />
        <argument
            android:name="bankName"
            app:argType="string" />
        <argument
            android:name="category"
            app:argType="string" />
        <argument
            android:name="dateTime"
            app:argType="string" />
        <argument
            android:name="confidence"
            app:argType="integer" />
        <argument
            android:name="rawSMS"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_merchant_transactions"
        android:name="com.smartexpenseai.app.ui.merchant.MerchantTransactionsFragment"
        android:label="Merchant Transactions"
        tools:layout="@layout/fragment_merchant_transactions">
        <argument
            android:name="merchantName"
            app:argType="string" />
        <action
            android:id="@+id/action_merchant_transactions_to_transaction_details"
            app:destination="@id/navigation_transaction_details" />
    </fragment>

</navigation>